# Pico4ML_AdapterBoard

./: README.md
HM01B0/: CMakeLists.txt  ReadmeEN.txt  main.c
HM01B0/lib/arducam/: CMakeLists.txt  arducam.c  arducam.h  hm01b0_init.h
HM01B0/lib/icm20948/: CMakeLists.txt
HM0360/: CMakeLists.txt  main.c
HM0360/lib/LCD/: st7735.c  st7735.h
HM0360/lib/arducam/: CMakeLists.txt  arducam.c  arducam.h  hm0360_init.h  image.pio
HM0360/lib/icm20948/: icm20948.c  icm20948.h
MagicWand/: CMakeLists.txt
MagicWand/examples/magic_wand/: CMakeLists.txt  accelerometer_handler.h  constants.h  gesture_predictor.cpp  gesture_predictor.h  magic_wand_model_data.cpp  magic_wand_model_data.h  main_functions.cpp  output_handler.cpp  output_handler.h  pico4ml_ble_accelerometer_handler.cpp  pico4ml_ble_main_functions.cpp
MagicWand/examples/magic_wand_ble/: CMakeLists.txt  imu_provider.h  main_functions.cpp
MagicWand/include/ICM42622/: CMakeLists.txt  ICM42622.cpp  ICM42622.h
MagicWand/include/LCD_st7735/: DEV_Config.c  DEV_Config.h  Debug.h  LCD_st7735.c  LCD_st7735.h  README.md  fonts.c  fonts.h  testimg.h
MagicWand/include/LCD_st7735/examples/RGB_Display/: RGB_Display.ino
MagicWand/include/LCD_st7735/examples/camera_display/: camera_display.ino
PICO_SPI_Camera/: CMakeLists.txt
PICO_SPI_Camera/ArduCAM/: ArduCAM.cpp  ArduCAM.h
PICO_SPI_Camera/Examples/Arducam_MINI_2MP_Plus_Videostreaing/: Arducam_MINI_2MP_Plus_Videostreaing.cpp
PICO_SPI_Camera/Examples/Arducam_MINI_5MP_Plus_Videostreaing/: Arducam_MINI_5MP_Plus_Videostreaing.cpp
pico-wake-word/: CMakeLists.txt
pico-wake-word/include/LCD_st7735/: CMakeLists.txt  LCD_st7735.c  LCD_st7735.h  fonts.c  fonts.h
pico-wake-word/include/LCD_st7735/examples/camera_display/: camera_display.ino
pico-wake-word/lib/pico-microphone/: CMakeLists.txt
pico-wake-word/lib/pico-microphone/examples/hello_pdm_microphone/: main.c
pico-wake-word/lib/pico-microphone/examples/usb_microphone/: main.c  tusb_config.h  usb_descriptors.c  usb_microphone.c
pico-wake-word/lib/pico-microphone/src/OpenPDM2PCM/: OpenPDMFilter.c  OpenPDMFilter.h
pico-wake-word/src/: analog_audio_provider.cc  command_responder.cc  main.cpp  pdm_audio_provider.cc
tflmicro/Arducam/src/: CMakeLists.txt  arducam.c  arducam.h
tflmicro/examples/person_detection/: CMakeLists.txt  detection_responder.cpp  image_provider.cpp  main_functions.cpp
tflmicro/examples/person_detection_screen/: image_provider.cpp  main_functions.cpp
tflmicro/examples/person_detection_screen/lib/LCD/: fonts.c  fonts.h  st7735.h
tflmicro/examples/person_detection_screen/lib/arducam_s/: arducam_s.c  arducam_s.h  hm01b0_init.h  hm0360_init.h
tflmicro/person_detection_display/: person_detection_display.pde
